feat(manager): user update from owner HTTP API
